@@ -123,6 +123,8 @@ Version 0.0.4b (in progress)
 * [Fixed] session_id error.
 * [Fixed] Incorrect team names in left column of HoF page.
 * [Added] A notice, configurable in the ACP, which can be displayed at the top of every page.
+* [Improved] opt.php now defined as PSFILE_IMGCOMMON_PHP.
+* [Removed] Redundant theme loading from script.php.
 
 Version 0.0.3b (01/16/2023)
 * [Added] Team rosters to team page.
